// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/signup/Signup should match snapshot for all signup options enabled with EnableUserCreaton disabled 1`] = `
<div
  className="signup-body"
>
  <div
    className="signup-body-content"
  >
    <div
      className="signup-body-message with-alternate-link"
    >
      <h1
        className="signup-body-message-title"
      >
        Let’s get started
      </h1>
      <p
        className="signup-body-message-subtitle"
      >
        Create your Mattermost account to start collaborating with your team
      </p>
    </div>
    <div
      className="signup-body-action"
    >
      <AlternateLink
        alternateLinkLabel="Log in"
        alternateLinkPath="/login"
        alternateMessage="Already have an account?"
        className="signup-body-alternate-link"
      />
      <div
        className="signup-body-card"
      >
        <div
          className="signup-body-card-content"
        >
          <h2
            className="signup-body-card-title"
          >
            Create your account with one of the following:
          </h2>
          <div
            className="signup-body-card-form-login-options column"
          >
            <ExternalLoginButton
              direction="column"
              icon={<LockIcon />}
              id="ldap"
              key="ldap"
              label="AD/LDAP Credentials"
              onClick={[Function]}
              url="/login?extra=create_ldap"
            />
            <ExternalLoginButton
              direction="column"
              icon={<LockIcon />}
              id="saml"
              key="saml"
              label="SAML"
              onClick={[Function]}
              url="/login/sso/saml?action=signup"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/signup/Signup should match snapshot for all signup options enabled with isLicensed disabled 1`] = `
<div
  className="signup-body"
>
  <div
    className="signup-body-content"
  >
    <div
      className="signup-body-message with-alternate-link"
    >
      <h1
        className="signup-body-message-title"
      >
        Let’s get started
      </h1>
      <p
        className="signup-body-message-subtitle"
      >
        Create your Mattermost account to start collaborating with your team
      </p>
    </div>
    <div
      className="signup-body-action"
    >
      <AlternateLink
        alternateLinkLabel="Log in"
        alternateLinkPath="/login"
        alternateMessage="Already have an account?"
        className="signup-body-alternate-link"
      />
      <div
        className="signup-body-card"
      >
        <div
          className="signup-body-card-content"
        >
          <h2
            className="signup-body-card-title"
          >
            Create your account
          </h2>
          <form
            className="signup-body-card-form"
          >
            <ForwardRef
              autoFocus={true}
              className="signup-body-card-form-email-input"
              customMessage={null}
              disabled={false}
              inputSize="large"
              name="email"
              onChange={[Function]}
              placeholder="Email address"
              type="text"
              value=""
            />
            <ForwardRef
              autoFocus={false}
              className="signup-body-card-form-name-input"
              customMessage={
                Object {
                  "type": "info",
                  "value": "You can use lowercase letters, numbers, periods, dashes, and underscores.",
                }
              }
              disabled={false}
              inputSize="large"
              name="name"
              onChange={[Function]}
              placeholder="Choose a Username"
              type="text"
              value=""
            />
            <ForwardRef
              className="signup-body-card-form-password-input"
              createMode={true}
              disabled={false}
              error=""
              info="Your password must be 5-72 characters long."
              inputSize="large"
              onChange={[Function]}
              value=""
            />
            <CheckInput
              ariaLabel="Terms and privacy policy checkbox"
              checked={false}
              id="signup-body-card-form-check-terms-and-privacy"
              name="terms"
              onChange={[Function]}
              text={
                Array [
                  "I agree to the ",
                  <ForwardRef
                    location="signup-terms-of-use"
                  >
                    Acceptable Use Policy
                  </ForwardRef>,
                  " and the ",
                  <ForwardRef
                    location="signup-privacy-policy"
                  >
                    Privacy Policy
                  </ForwardRef>,
                ]
              }
            />
            <SaveButton
              defaultMessage="Create account"
              disabled={true}
              extraClasses="signup-body-card-form-button-submit large"
              onClick={[Function]}
              saving={false}
              savingMessage="Creating account…"
            />
          </form>
          <div
            className="signup-body-card-form-divider"
          >
            <span
              className="signup-body-card-form-divider-label"
            >
              or create an account with
            </span>
          </div>
          <div
            className="signup-body-card-form-login-options"
          >
            <ExternalLoginButton
              icon={<LoginGitlabIcon />}
              id="gitlab"
              key="gitlab"
              label="GitLab"
              onClick={[Function]}
              style={
                Object {
                  "borderColor": "",
                  "color": "",
                }
              }
              url="/oauth/gitlab/signup"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/signup/Signup should match snapshot for all signup options enabled with isLicensed enabled 1`] = `
<div
  className="signup-body"
>
  <div
    className="signup-body-content"
  >
    <div
      className="signup-body-message with-alternate-link"
    >
      <h1
        className="signup-body-message-title"
      >
        Let’s get started
      </h1>
      <p
        className="signup-body-message-subtitle"
      >
        Create your Mattermost account to start collaborating with your team
      </p>
    </div>
    <div
      className="signup-body-action"
    >
      <AlternateLink
        alternateLinkLabel="Log in"
        alternateLinkPath="/login"
        alternateMessage="Already have an account?"
        className="signup-body-alternate-link"
      />
      <div
        className="signup-body-card"
      >
        <div
          className="signup-body-card-content"
        >
          <h2
            className="signup-body-card-title"
          >
            Create your account
          </h2>
          <form
            className="signup-body-card-form"
          >
            <ForwardRef
              autoFocus={true}
              className="signup-body-card-form-email-input"
              customMessage={null}
              disabled={false}
              inputSize="large"
              name="email"
              onChange={[Function]}
              placeholder="Email address"
              type="text"
              value=""
            />
            <ForwardRef
              autoFocus={false}
              className="signup-body-card-form-name-input"
              customMessage={
                Object {
                  "type": "info",
                  "value": "You can use lowercase letters, numbers, periods, dashes, and underscores.",
                }
              }
              disabled={false}
              inputSize="large"
              name="name"
              onChange={[Function]}
              placeholder="Choose a Username"
              type="text"
              value=""
            />
            <ForwardRef
              className="signup-body-card-form-password-input"
              createMode={true}
              disabled={false}
              error=""
              info="Your password must be 5-72 characters long."
              inputSize="large"
              onChange={[Function]}
              value=""
            />
            <CheckInput
              ariaLabel="Terms and privacy policy checkbox"
              checked={false}
              id="signup-body-card-form-check-terms-and-privacy"
              name="terms"
              onChange={[Function]}
              text={
                Array [
                  "I agree to the ",
                  <ForwardRef
                    location="signup-terms-of-use"
                  >
                    Acceptable Use Policy
                  </ForwardRef>,
                  " and the ",
                  <ForwardRef
                    location="signup-privacy-policy"
                  >
                    Privacy Policy
                  </ForwardRef>,
                ]
              }
            />
            <SaveButton
              defaultMessage="Create account"
              disabled={true}
              extraClasses="signup-body-card-form-button-submit large"
              onClick={[Function]}
              saving={false}
              savingMessage="Creating account…"
            />
          </form>
          <div
            className="signup-body-card-form-divider"
          >
            <span
              className="signup-body-card-form-divider-label"
            >
              or create an account with
            </span>
          </div>
          <div
            className="signup-body-card-form-login-options"
          >
            <ExternalLoginButton
              icon={<LoginGitlabIcon />}
              id="gitlab"
              key="gitlab"
              label="GitLab"
              onClick={[Function]}
              style={
                Object {
                  "borderColor": "",
                  "color": "",
                }
              }
              url="/oauth/gitlab/signup"
            />
            <ExternalLoginButton
              icon={<LoginGoggleIcon />}
              id="google"
              key="google"
              label="Google"
              onClick={[Function]}
              url="/oauth/google/signup"
            />
            <ExternalLoginButton
              icon={<EntraIdIcon />}
              id="office365"
              key="office365"
              label="Entra ID"
              onClick={[Function]}
              url="/oauth/office365/signup"
            />
            <ExternalLoginButton
              icon={<LoginOpenIdIcon />}
              id="openid"
              key="openid"
              label="Open ID"
              onClick={[Function]}
              style={
                Object {
                  "borderColor": "",
                  "color": "",
                }
              }
              url="/oauth/openid/signup"
            />
            <ExternalLoginButton
              icon={<LockIcon />}
              id="ldap"
              key="ldap"
              label="AD/LDAP Credentials"
              onClick={[Function]}
              url="/login?extra=create_ldap"
            />
            <ExternalLoginButton
              icon={<LockIcon />}
              id="saml"
              key="saml"
              label="SAML"
              onClick={[Function]}
              url="/login/sso/saml?action=signup"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
